--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>3.1.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
         <!-- Spring Boot Starter Data JPA -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -54,11 +58,7 @@
         </dependency>
 
         <!-- Spring Boot Starter Security -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-            <version>3.1.3</version>
-        </dependency>
+
 
     </dependencies>
 
