--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:sqlserver://localhost:8080/tradeIT
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=TradeIT;
+spring.datasource.username=sa
+spring.datasource.password=abc123!#
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.show-sql = true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
