--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>3.1.3</version>
+            <version>3.1.4</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -43,7 +43,11 @@
             <artifactId>spring-boot-starter-security</artifactId>
             <version>3.1.4</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version> 3.1.2</version>
+        </dependency>
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -51,10 +55,17 @@
             <version>1.18.30</version>
             <scope>provided</scope>
         </dependency>
+        <!-- JSOn Web Token -->
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt-orgjson</artifactId>
+            <artifactId>jjwt-api</artifactId>
+            <version>0.11.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
             <version>0.11.5</version>
         </dependency>
 
@@ -66,7 +77,7 @@
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt-orgjson</artifactId>
+            <artifactId>jjwt-jackson</artifactId>
             <version>0.11.5</version>
         </dependency>
 
@@ -81,7 +92,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>5.5.7.Final</version> <!-- Use a valid version -->
+            <version>6.2.7.Final</version> <!-- Use a valid version -->
         </dependency>
 
         <!-- HikariCP Connection Pool -->
@@ -97,7 +108,6 @@
             <artifactId>spring-security-core</artifactId>
             <version>6.1.4</version>
         </dependency>
-
 
     </dependencies>
 
