Added all controller Endpoints for: Product, Category, User, Proposal

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=TradeIT;
 spring.datasource.username=sa
 spring.datasource.password=abc123!#
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = none
 spring.jpa.hibernate.show-sql = true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.properties.jakarta.persistence.jpa-compliance=true
+spring.jpa.database=H2
+
