Connected to minIO Image upload system

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.properties.jakarta.persistence.jpa-compliance=true
 spring.jpa.database=H2
 
+# MinIO Configuration
+
+minio.endpoint=http://127.0.0.1:9001
+minio.accessKey=a21wtKrcaSOboiOrECMD
+minio.secretKey=wlXZLprr2ceMqBFkNyVTvPxgfIxi1tUtntqFidy1
