--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,11 @@ spring.jpa.hibernate.show-sql = true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.properties.jakarta.persistence.jpa-compliance=true
 spring.jpa.database=H2
-
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 # MinIO Configuration
-
-minio.endpoint=http://127.0.0.1:9001
+minio.url=http://127.0.0.1:9000
 minio.accessKey=a21wtKrcaSOboiOrECMD
 minio.secretKey=wlXZLprr2ceMqBFkNyVTvPxgfIxi1tUtntqFidy1
+minio.api=s3v4
+minio.path=auto
