--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,12 @@ spring.datasource.password=abc123!#
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.hibernate.show-sql = true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=epetitiimd@gmail.com
+spring.mail.password=havnahduswtlwrfc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 spring.jpa.properties.jakarta.persistence.jpa-compliance=true
 spring.jpa.database=H2
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
