--- a/pom.xml
+++ b/pom.xml
@@ -130,5 +130,13 @@
             <version>2.3.4</version>
         </dependency>
     </dependencies>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+        <finalName>docker-spring-boot</finalName>
+    </build>
 </project>
