--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ minio.accessKey=a21wtKrcaSOboiOrECMD
 minio.secretKey=wlXZLprr2ceMqBFkNyVTvPxgfIxi1tUtntqFidy1
 minio.api=s3v4
 minio.path=auto
+
+server.port = ${PORT:3000}
