--- a/pom.xml
+++ b/pom.xml
@@ -43,8 +43,8 @@
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.30</version>
+            <artifactId>lombok-maven-plugin</artifactId>
+            <version>1.18.20.0</version>
             <scope>provided</scope>
         </dependency>
         <!-- JSOn Web Token -->
