Changed lombok dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok-maven-plugin</artifactId>
             <version>1.18.20.0</version>
-            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
         </dependency>
         <!-- JSOn Web Token -->
         <dependency>
