--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=TradeIT;
-spring.datasource.username=sa
-spring.datasource.password=abc123!#
+spring.datasource.url=jdbc:sqlserver://trade-it.database.windows.net:1433;databaseName=TradeIT;user=tradeitadmin;password=abc123!#;ecrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.hibernate.show-sql = true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
