Changed barter status update logic, implemented chat, changed configuration of websocket.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=jdbc:sqlserver://trade-it.database.windows.net:1433;databaseName=TradeIT;user=tradeitadmin;password=abc123!#;ecrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=TradeIT;
+spring.datasource.username=sa
+spring.datasource.password=abc123!#
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.hibernate.show-sql = true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
