--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,20 @@
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=TradeIT;
-spring.datasource.username=sa
-spring.datasource.password=abc123!#
+spring.datasource.url=jdbc:sqlserver://trade-it.database.windows.net:1433;databaseName=TradeITfinal;user=tradeitadmin;password=abc123!#;ecrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.hibernate.show-sql = true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=epetitiimd@gmail.com
-spring.mail.password=havnahduswtlwrfc
+spring.mail.username=tradeit.md@gmail.com
+spring.mail.password=rkjvtdhzwyxrgizk
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.jpa.properties.jakarta.persistence.jpa-compliance=true
 spring.jpa.database=H2
 # MinIO Configuration
-minio.url=http://127.0.0.1:9000
-minio.accessKey=a21wtKrcaSOboiOrECMD
-minio.secretKey=wlXZLprr2ceMqBFkNyVTvPxgfIxi1tUtntqFidy1
+minio.url=https://minio-server-5bcy.onrender.com
+minio.accessKey=YyYQAMoppsw3bERIKDfu
+minio.secretKey=cyU93jC8wVM8VOmwQRya6Emzo5ZVpKPDAq3DHrLr
 minio.api=s3v4
 minio.path=auto
 
