update to final changes after deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=tradeit.md@gmail.com
-spring.mail.password=rkjvtdhzwyxrgizk
+spring.mail.username=trade.it.md17@gmail.com
+spring.mail.password=hbstqzrszeezoxsw
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.jpa.properties.jakarta.persistence.jpa-compliance=true
